# HYDRAGROW

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: frontend-quality.yml  quality-roadmap.yml
ESP32-C3-CONTROLLER-NODE/: Cargo.toml  sdkconfig.defaults
ESP32-C3-CONTROLLER-NODE/src/: config.rs  controller.rs  led.rs  main.rs  mqtt.rs  pump.rs
ESP32-C3-CONTROLLER-NODE/src/fsm/: auto_fsm.rs  calibration.rs  commands.rs  context.rs  mod.rs  types.rs  utils.rs
ESP32-C3-CONTROLLER-NODE/src/sensors/: ds18b20.rs  isolated_adc.rs  jsn_sr04t.rs  mod.rs
ESP32-C3-SENSOR-NODE/: .clangd  compile_commands.json  platformio.ini
ESP32-C3-SENSOR-NODE/src/: main.cpp
docs/: rollout-plan.md
docs/engineering/: code-standards.md  domain-glossary.md  quality-baseline.md
docs/process/: baseline-lock.txt  baseline-metrics.env  p0-remediation-week2.md  quality-gate-sla.md  quality-governance.md  roadmap-4-week-execution.md
hydragrow-backend/: Cargo.toml
hydragrow-backend/migrations/: 20260312064526_init_schema.sql  20260422093000_add_dynamic_dosing_calibration_fields.sql  20260426090000_rename_sensor_calibration_enable_columns.sql  20260426142422_3-point-calibrate.sql  (+4 more)
hydragrow-backend/src/: main.rs
hydragrow-frontend/: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
hydragrow-shared/: Cargo.toml
scripts/: check_alias_naming.sh  check_quality_regression.sh  generate_quality_report.sh  update_quality_baseline_lock.sh
(+60 files in other folders)
